--- a/src/components/ui/GameList/GameList.css
+++ b/src/components/ui/GameList/GameList.css
@@ -33,7 +33,6 @@
 }
 
 .GameList .Character {
-  width: 95px;
   margin-top: -9px;
 }
 
