--- a/src/components/ui/Modal/Modal.css
+++ b/src/components/ui/Modal/Modal.css
@@ -53,11 +53,13 @@
 }
 
 .Modal .modal-title {
-  padding: 8px 0;
   width: 100%;
-  border-radius: 20px;
   background: white;
   z-index: 1;
+  min-height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Modal .modal-content {
@@ -78,6 +80,7 @@
   font-family: inherit;
   font-size: inherit;
   cursor: pointer;
+  z-index: 2;
 }
 
 .Modal .close-button span {
